Production/Platform/platform/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: terrestrialplatform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: terrestrial.cloud
      http:
        paths:
          - path: /web/(.*)
            pathType: Prefix

            backend:

              service:

                name: platform-service

                port:

                  number: 8002
